<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".LoginTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.20"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="TODO"
            android:padding="20dp"
            android:src="@drawable/main_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="0.65"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_reg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="null"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/name"
                android:imeActionId="@+id/et_reg_phone"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"
                android:textSize="18sp"
                tools:ignore="InvalidImeActionId" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/login_input" />

            <EditText
                android:id="@+id/et_reg_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="null"
                android:drawableStart="@drawable/ic_smartphone_black_24dp"
                android:drawableLeft="@drawable/ic_smartphone_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/_91_9704858580"
                android:imeActionId="@+id/et_reg_email"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"
                android:textSize="18sp"
                tools:ignore="InvalidImeActionId" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/login_input" />

            <EditText
                android:id="@+id/et_reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="null"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/madhu8580_gmail_com"
                android:imeActionId="@+id/et_reg_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"
                android:textSize="18sp"
                tools:ignore="InvalidImeActionId,TextFields" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/login_input" />

            <EditText
                android:id="@+id/et_reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="null"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/passsword"
                android:imeActionId="@+id/et_reg_conf_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"
                android:textSize="18sp"
                tools:ignore="InvalidImeActionId" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/login_input" />

            <EditText
                android:id="@+id/et_reg_conf_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="null"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/login_input" />

            <TextView
                android:id="@+id/txt_reg_select_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:text="@string/select_branch"
                android:textColorHint="@color/hint_color"
                android:textSize="20dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/login_input" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:text="@string/select_year"
                android:textColorHint="@color/hint_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/login_input" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:text="@string/select_section"
                android:textColorHint="@color/hint_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/student_signup"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/vjit"
            android:textColor="#EB1111"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:singleLine="true"
            android:text="@string/canteen_app"
            android:textColor="#EB1111"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>